--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-     <center><h1>Signup Form</h1><br>
+    <h1>Signup Form</h1><br>
     <label for="emailSignup">Email Address</label><br>
     <input type="email" name="email" id="emailSignup"><br>
     <label for="passwordSignup">Password</label><br>
     <input type="password" name="password" id="passwordSignup"><br>
     <button id="signup">Sign up</button>
-     </center>
+     
     <script src="firebase.js" type="module"></script>
     <script src="app.js" type="module"></script>
 </body>
