--- a/index.html
+++ b/index.html
@@ -6,60 +6,35 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div class="container">
-        <!-- signup  -->
-        <div class="signup">
-            <form action="">
-                <h1>Creat Account</h1>
-                <div class="icon">
-                    <a href="#" class="icon"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                </div>
-                <span>or use email for registration</span>
-                <input type="text" placeholder="Name">
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
-                <button>sign up</button>
-            </form>
-        </div>
-        <!-- signin  -->
-        <div class="signin">
-            <form action="">
-                <h1>Sign In</h1>
-                <div class="icon">
-                    <a href="#" class="icon"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                </div>
-                <span>or use email password</span>
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
-                <a href="#">Forget Password</a>
-                <button>Sign in</button>
-            </form>
-        </div>
-        <!-- toggle container  -->
-         <div class="toggle-container">
-            <div class="toggle">
-                <!-- toggle left  -->
-                <div class="toggel-panel toggle-left">
-                    <h1>Welcome User</h1>
-                    <p>If you already have an account</p>
-                    <button class="hidden" id="login">Sign In</button>
-                </div>
-                <!-- right  -->
-                <div class="toggel-panel toggle-right">
-                    <h1>Hello User</h1>
-                    <p>If you don't have an account</p>
-                    <button class="hidden" id="register">Sign Up</button>
-                </div>
+<body class="font bg-[#F6F5F7]">
+    <div class=" w-[900px] grid grid-cols-2 mx-auto mx-[100px] my-[70px] ">
+            <div class="bg-welcome flex flex-col px-20 py-20 justify-around items-center">
+                <h1 class="text-[32px] font-bold">Welcome Back!</h1>
+                <p class="text-center">To keep connected with us please login with your personal info</p>
+                <button class="border border-solid py-2 px-10 text-[12px] font-bold rounded-full">SIGN IN</button>
             </div>
-         </div>
-    </div>
+            <div class="bg-white flex flex-col px-15 py-14 justify-evenly text-center gap-5">
+                <h1 class="text-[32px] font-bold">Create Account</h1>
+                <div>
+                    <a href="#" class="border py-3 px-4 border-black rounded-full text-[12px]"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" class="border py-3 px-4 border-black rounded-full text-[12px]"><i class="fa-brands fa-google"></i></a>
+                    <a href="#" class="border py-3 px-4 border-black rounded-full text-[12px]"><i class="fa-brands fa-github"></i></a>
+                </div>
+                <p class="text-center text-[14px]">or use your email for registration</p>
+                <form action="" class="flex flex-col justify-between p-5 gap-2">
+                    <input type="text" id="" placeholder="Name" class="border w-100 px-2 py-2 text-[14px]">
+                    <input type="email" id="" placeholder="Email" required class="border w-100 px-2 py-2 text-[14px]">
+                    <input type="password" id="" placeholder="Password" class="border w-100 px-2 py-2 text-[14px]">
+                </form>
+                <div><button class="border border-solid py-2 px-10 text-[12px] font-bold rounded-full">SIGN UP</button></div>
+                
+            </div>
+        
 
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
