--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="font bg-[#F6F5F7]">
     <section class="p-2 sm:p-6">
@@ -15,7 +14,7 @@
             <div class="bg-welcome flex flex-col text-center items-center py-20 hidden sm:block rounded-md">
                 <h1 class="text-[32px] font-bold pb-4">Welcome Back!</h1>
                 <p class="text-center pb-6">To keep connected with us please login with your personal info</p>
-                <button class="border border-solid py-2 px-10 text-[12px] font-bold rounded-full hover:transition-all hover:scale-[1.1]">SIGN IN</button>
+                <button class="border border-solid py-2 px-10 text-[12px] font-bold rounded-full hover:transition-all hover:scale-[1.1]" id="loginBtn">SIGN IN</button>
             </div>
             <div class="bg-white flex flex-col justify-evenly items-stretch text-center gap-5 py-8 px-2 rounded-md">
                 <h1 class="text-[29px] sm:text-[32px] font-bold">Create Account</h1>
@@ -26,11 +25,11 @@
                 </div>
                 <p class="text-center text-[14px]">or use your email for registration</p>
                 <form action="" class="flex flex-col justify-between px-3 gap-2">
-                    <input type="text" id="" placeholder="Name" class="border w-100 px-2 py-2 text-[14px]">
-                    <input type="email" id="" placeholder="Email" required class="border w-100 px-2 py-2 text-[14px]">
-                    <input type="password" id="" placeholder="Password" class="border w-100 px-2 py-2 text-[14px]">
+                    <input type="text" id="nameSignup" placeholder="Name" class="border w-100 px-2 py-2 text-[14px]">
+                    <input type="email" id="emailSignup" placeholder="Email" required class="border w-100 px-2 py-2 text-[14px]">
+                    <input type="password" id="passwordSignup" placeholder="Password" class="border w-100 px-2 py-2 text-[14px]">
                 </form>
-                <div><button class="border border-solid py-2 px-10 text-[12px] font-bold rounded-full bg-[#FF4B2B] text-white hover:transition-all hover:scale-[1.1]">SIGN UP</button></div>
+                <div><button class="border border-solid py-2 px-10 text-[12px] font-bold rounded-full bg-[#FF4B2B] text-white hover:transition-all hover:scale-[1.1]" id="signUp">SIGN UP</button></div>
                 
             </div>
         
