--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
             <div class="bg-white flex flex-col justify-evenly items-stretch text-center gap-5 py-8 px-2 rounded-md">
                 <h1 class="text-[29px] sm:text-[32px] font-bold">Create Account</h1>
                 <div>
-                    <a href="#" class="border-[1px] py-3 px-4 border-slate-800 rounded-full text-[12px] hover:bg-[#FF4B2B] hover:border-transparent hover:text-white"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="border-[1px] py-3 px-4 border-slate-800 rounded-full text-[12px] hover:bg-[#FF4B2B] hover:border-transparent hover:text-white"><i class="fa-brands fa-google"></i></a>
-                    <a href="#" class="border-[1px] py-3 px-4 border-slate-800 rounded-full text-[12px] hover:bg-[#FF4B2B] hover:border-transparent hover:text-white"><i class="fa-brands fa-github"></i></a>
+                    <!-- icons  -->
+                    <a href="#" id="facebook" class="border-[1px] py-3 px-4 border-slate-800 rounded-full text-[12px] hover:bg-[#FF4B2B] hover:border-transparent hover:text-white"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" id="google" class="border-[1px] py-3 px-4 border-slate-800 rounded-full text-[12px] hover:bg-[#FF4B2B] hover:border-transparent hover:text-white"><i class="fa-brands fa-google"></i></a>
+                    <a href="#" id="github" class="border-[1px] py-3 px-4 border-slate-800 rounded-full text-[12px] hover:bg-[#FF4B2B] hover:border-transparent hover:text-white"><i class="fa-brands fa-github"></i></a>
                 </div>
                 <p class="text-center text-[14px]">or use your email for registration</p>
                 <form action="" class="flex flex-col justify-between px-3 gap-2">
