--- a/login.html
+++ b/login.html
@@ -14,8 +14,9 @@
             <div class="bg-white flex flex-col justify-evenly items-stretch text-center gap-5 py-10 px-2 rounded-md">
                 <h1 class="text-[29px] sm:text-[32px] font-bold">Sign in</h1>
                 <div>
+                    <!-- icons  -->
                     <a href="#" class="border-[1px] py-3 px-4 border-slate-800 rounded-full text-[12px] hover:bg-[#FF4B2B] hover:border-transparent hover:text-white"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="border-[1px] py-3 px-4 border-slate-800 rounded-full text-[12px] hover:bg-[#FF4B2B] hover:border-transparent hover:text-white"><i class="fa-brands fa-google"></i></a>
+                    <a href="#" class="border-[1px] py-3 px-4 border-slate-800 rounded-full text-[12px] hover:bg-[#FF4B2B] hover:border-transparent hover:text-white" id="googleBtn"><i class="fa-brands fa-google"></i></a>
                     <a href="#" class="border-[1px] py-3 px-4 border-slate-800 rounded-full text-[12px] hover:bg-[#FF4B2B] hover:border-transparent hover:text-white"><i class="fa-brands fa-github"></i></a>
                 </div>
                 <p class="text-center text-[14px]">or use your account</p>
